tests/negative/typecheck/ptr_cast_from_not_ptr.orng
// ptr_cast_from_not_ptr.orng:7:28: error: expected address type type for ptr_cast, got `Int`
//     let y: &Int = @ptr_cast(x)
//                           ^
// 
fn main() -> Int {
    let x: Int = 4
    let y: &Int = @ptr_cast(x)
}
